--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,29 @@
 version: '3.7'
 # services to run
 services:
+    selenium:
+        image: selenium/standalone-chrome-debug
+        ports:
+            - 4444:4444
+            - 5901:5900
     website:
         build:
             context: .
         ports: 
             - 80:80
+    unit-tests:
+        environment: 
+            SELENIUM_HOST: selenium
+            SELENIUM_PORT: 4444 
+        volumes: 
+            - "$PWD:/app"
+        build: 
+            context: .
+            dockerfile: rspec.dockerfile
+        command: 
+            - --pattern
+            - /app/spec/unit/*_spec.rb"
+
 #    instead of looking for image from docker hub, we can find a docker file to build locally        
 
 #    other services available besides running a website: 
