--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 services:
+  terraform:
+    build: 
+      context: .
   selenium:
     image: selenium/standalone-chrome-debug
     ports:
