--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,27 @@
 version: '3.7'
 services:
+  aws: 
+    image: organs/awscli
+    environment: 
+      AWS_ACCESS_KEY_ID: -----------
+      AWS_SECRET_ACCESS_KEY: --------------
+      AWS_REGION: us-west-2
+      AWS_DEFAULT_REGION: us-west-2
+    volumes:
+      - "$PWD:/app"
+    working_dir: /app
   terraform:
     build: 
       context: .
       dockerfile: terraform.Dockerfile
+    environment: 
+      AWS_ACCESS_KEY_ID: -----------
+      AWS_SECRET_ACCESS_KEY: --------------
+      AWS_REGION: us-west-2
+      AWS_DEFAULT_REGION: us-west-2
+    volumes:
+      - "$PWD:/app"
+    working_dir: /app
   selenium:
     image: selenium/standalone-chrome-debug
     ports:
@@ -14,6 +32,19 @@ services:
     context: .
    ports:
     - 80:80
+  integration-tests:
+    build:
+      dockerfile: rspec.dockerfile
+      context: .
+    environment:
+      SELENIUM_HOST: selenium
+      SELENIUM_PORT: 4444
+    volumes:
+      - $PWD:/app
+    entrypoint: rspec
+    command:
+      - --pattern
+      - /app/spec/integration/*_spec.rb
   unit-tests:
     build:
       dockerfile: rspec.dockerfile
