--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.7'
 services:
+  jenkins:
+    build: 
+      context: .
+      dockerfile: jenkins.Dockerfile
+    volumes: 
+      - $PWD/jenkins_home:/var/jenkins_home
+      - $PWD:/app
+    ports: 
+      - 8080:8080
   aws: 
     image: organs/awscli
     environment: 
